Some more work done; fluxes section

--- a/References/References.bib
+++ b/References/References.bib
@@ -51,6 +51,37 @@
 	keywords = {Science / Physics / Astrophysics, Science / Physics / General, Science / Physics / Nuclear}
 }
 
+@article{biglari_influence_1990,
+	title = {Influence of sheared poloidal rotation on edge turbulence},
+	volume = {2},
+	issn = {0899-8221},
+	url = {https://aip.scitation.org/doi/abs/10.1063/1.859529},
+	doi = {10.1063/1.859529},
+	number = {1},
+	urldate = {2018-04-09},
+	journal = {Physics of Fluids B: Plasma Physics},
+	author = {Biglari, H. and Diamond, P. H. and Terry, P. W.},
+	month = jan,
+	year = {1990},
+	pages = {1--4}
+}
+
+@article{boedo_enhanced_2000,
+	title = {Enhanced particle confinement and turbulence reduction due to {E} × {B} shear in the {TEXTOR} tokamak},
+	volume = {40},
+	issn = {0029-5515},
+	url = {http://stacks.iop.org/0029-5515/40/i=7/a=309},
+	doi = {10.1088/0029-5515/40/7/309},
+	abstract = {Positive radial electric fields have been created at the edge of the TEXTOR tokamak plasma using an electrode. The electric field induces a thin (δr 1.5 cm), E × B driven layer at the edge rotating poloidally at 12-20 km/s and featuring high shear. Concomitant changes in the density and poloidal electric field fluctuations and their cross-phase in the shear layer result in suppression of radial turbulent particle transport, even at low radial electric field strength. Temperature fluctuations are reduced, resulting in diminished turbulent heat flux. As turbulent particle transport is quenched, the particle confinement time τ p increases by a factor of 2 and the energy confinement time τ E by 20\%. Turbulent transport accounts for 50\% of the total particle flux. Both the cross-phase and the density fluctuations are sensitive to the sign of ∇E r .},
+	language = {en},
+	number = {7},
+	urldate = {2018-04-10},
+	journal = {Nuclear Fusion},
+	author = {Boedo, J. and Gray, D. and Jachmich, S. and Conn, R. and Terry, G. P. and Tynan, G. and Oost, G. Van and Weynants, R. R. and Team, TEXTOR},
+	year = {2000},
+	pages = {1397}
+}
+
 @article{bourdelle_l_2015,
 	title = {L to {H} mode transition: parametric dependencies of the temperature threshold},
 	volume = {55},
@@ -67,6 +98,22 @@
 	year = {2015},
 	keywords = {power laws, scaling laws},
 	pages = {073015}
+}
+
+@article{briguglio_high_2000,
+	title = {High and low frequency {Alfvén} modes in tokamaks},
+	volume = {40},
+	issn = {0029-5515},
+	url = {http://stacks.iop.org/0029-5515/40/i=3Y/a=334},
+	doi = {10.1088/0029-5515/40/3Y/334},
+	abstract = {The article presents an analysis of the typical features of shear Alfvén waves in tokamak plasmas in a frequency domain ranging from the `high' frequencies (ω \#\#IMG\#\# [http://ej.iop.org/icons/Entities/cong.gif] cong v A /2qR 0 , where v A is the Alfvén speed and qR 0 is the tokamak connection length) of the toroidal gap to the `low' frequencies, comparable with the thermal ion diamagnetic frequency ω *pi and/or the thermal ion transit frequency ω ti = v ti /qR 0 (where v ti is the ion thermal speed).},
+	language = {en},
+	number = {3Y},
+	urldate = {2018-03-14},
+	journal = {Nuclear Fusion},
+	author = {Briguglio, S. and Chen, L. and Dong, Jiaqi and Fogaccia, G. and Santoro, R. A. and Vlad, G. and Zonca, F.},
+	year = {2000},
+	pages = {701}
 }
 
 @article{burrell_effects_1997,
@@ -227,6 +274,20 @@
 	year = {2007}
 }
 
+@book{fried_plasma_2015,
+	title = {The {Plasma} {Dispersion} {Function}: {The} {Hilbert} {Transform} of the {Gaussian}},
+	isbn = {9781483261737},
+	shorttitle = {The {Plasma} {Dispersion} {Function}},
+	abstract = {The Plasma Dispersion Function: The Hilbert Transform of the Gaussian focuses on the reactions, transformations, and calculations involved in plasma dispersion function. The book first offers information on the properties of Z, including symmetry properties, values for special arguments, power series, asymptotic expansion, and differential equation characterization. The text then ponders on the applications to plasma physics. Numerical calculations on the function of Z are presented. The manuscript takes a look at table generation and accuracy wherein various methods are proposed in computing the error function in the multiple regions of the complex plane. The text also elaborates on the general behavior of the functions. The book is a dependable reference for readers interested in the plasma dispersion function.},
+	language = {en},
+	publisher = {Academic Press},
+	author = {Fried, Burton D. and Conte, Samuel D.},
+	month = aug,
+	year = {2015},
+	note = {Google-Books-ID: OMg3BQAAQBAJ},
+	keywords = {Science / Physics / General}
+}
+
 @article{garbet_turbulence_2001,
 	title = {Turbulence in fusion plasmas: key issues and impact on transport modelling},
 	volume = {43},
@@ -368,6 +429,7 @@
 	year = {1998},
 	pages = {4121--4123}
 }
+
 @article{itoh_edge_1991,
 	title = {Edge localized mode activity as a limit cycle in tokamak plasmas},
 	volume = {67},
@@ -427,6 +489,22 @@
 	author = {Kobayashi, T. and Itoh, K. and Ido, T. and Kamiya, K. and Itoh, S.-I. and Miura, Y. and Nagashima, Y. and Fujisawa, A. and Inagaki, S. and {K. Ida} and Hoshino, K.},
 	year = {2017},
 	pages = {072005}
+}
+
+@article{lawson_criteria_1957,
+	title = {Some {Criteria} for a {Power} {Producing} {Thermonuclear} {Reactor}},
+	volume = {70},
+	issn = {0370-1301},
+	url = {http://stacks.iop.org/0370-1301/70/i=1/a=303},
+	doi = {10.1088/0370-1301/70/1/303},
+	abstract = {Calculations of the power balance in thermonuclear reactors operating under various idealized conditions are given. Two classes of reactor are considered: first, self-sustaining systems in which the charged reaction products are trapped and, secondly, pulsed systems in which all the reaction products escape so that energy must be supplied continuously during the pulse. It is found that not only must the temperature be sufficiently high, but also the reaction must be sustained long enough for a definite fraction of the fuel to be burnt.},
+	language = {en},
+	number = {1},
+	urldate = {2018-04-10},
+	journal = {Proceedings of the Physical Society. Section B},
+	author = {Lawson, J. D.},
+	year = {1957},
+	pages = {6}
 }
 
 @article{mcdermott_edge_2009,
@@ -512,6 +590,22 @@
 	pages = {1110}
 }
 
+@article{rozhansky_simulation_2001,
+	title = {Simulation of tokamak edge plasma including self-consistent electric fields},
+	volume = {41},
+	issn = {0029-5515},
+	url = {http://stacks.iop.org/0029-5515/41/i=4/a=305},
+	doi = {10.1088/0029-5515/41/4/305},
+	abstract = {A complete system of transport equations with all the important perpendicular currents is derived for the simulation of tokamak edge plasma. These transport equations are implemented in the B2.5 code and solved for the parameters of the ASDEX Upgrade tokamak. The relative roles of different mechanisms of transverse conductivity in the formation of the potential profile are studied. It is demonstrated that a reasonable potential distribution in the tokamak edge plasma can be obtained without an ad hoc assumption of the existence of the anomalous perpendicular conductivity. The role of E × B drifts in the redistribution of edge plasma and closing of the currents in the plasma is analysed.},
+	language = {en},
+	number = {4},
+	urldate = {2018-03-12},
+	journal = {Nuclear Fusion},
+	author = {Rozhansky, V. A. and Voskoboynikov, S. P. and Kaveeva, E. G. and Coster, D. P. and Schneider, R.},
+	year = {2001},
+	pages = {387}
+}
+
 @article{ryter_progress_2002,
 	title = {Progress of the international {H}-mode power threshold database activity},
 	volume = {44},
@@ -583,6 +677,22 @@
 	publisher = {Springer},
 	author = {Schnack, Dalton D.},
 	year = {2009}
+}
+
+@article{schneider_differences_2012,
+	title = {Differences in the {H}-mode pedestal width of temperature and density},
+	volume = {54},
+	issn = {0741-3335},
+	url = {http://stacks.iop.org/0741-3335/54/i=10/a=105009},
+	doi = {10.1088/0741-3335/54/10/105009},
+	abstract = {A pedestal database was built using data from type-I ELMy H-modes of ASDEX Upgrade, DIII-D and JET. ELM synchronized pedestal data were analysed with the two-line method. The two-line method is a bilinear fit which shows better reproducibility of pedestal parameters than a modified hyperbolic tangent fit. This was tested with simulated and experimental data. The influence of the equilibrium reconstruction on pedestal parameters was investigated with sophisticated reconstructions from CLISTE and EFIT including edge kinetic profiles. No systematic deviation between the codes could be observed. The flux coordinate system is influenced by machine size, poloidal field and plasma shape. This will change the representation of the width in different coordinates, in particular, the two normalized coordinates Ψ\_N and r / a show a very different dependence on the plasma shape. The scalings derived for the pedestal width, Δ, of all machines suggest a different scaling for the electron temperature and the electron density. Both cases show similar dependence with machine size, poloidal magnetic field and pedestal electron temperature and density. The influence of ion temperature and toroidal magnetic field is different on each of Δ\_T\_e and Δ\_n\_e. In dimensionless form the density pedestal width in Ψ\_N scales with \${\textbackslash}rho{\textasciicircum}0.6\_{\textbackslash}rm i{\textbackslash}star\$, the temperature pedestal width with \${\textbackslash}beta\_{\textbackslash}rm p,ped{\textasciicircum}0.5\$. Both widths also show a strong correlation with the plasma shape. The shape dependence originates from the coordinate transformation and is not visible in real space. The presented scalings predict that in ITER the temperature pedestal will be appreciably wider than the density pedestal.},
+	language = {en},
+	number = {10},
+	urldate = {2018-03-22},
+	journal = {Plasma Physics and Controlled Fusion},
+	author = {Schneider, P. A. and Wolfrum, E. and Groebner, R. J. and Osborne, T. H. and Beurskens, M. N. A. and Dunne, M. G. and Ferron, J. R. and Günter, S. and {B Kurzan} and Lackner, K. and Snyder, P. B. and Zohm, H. and Team, the ASDEX Upgrade and Team, the DIII-D. and Contributors, JET EFDA},
+	year = {2012},
+	pages = {105009}
 }
 
 @article{scott_three-dimensional_1997,
@@ -687,6 +797,22 @@
 	author = {Stringer, T. E.},
 	year = {1995},
 	pages = {1008}
+}
+
+@article{stringer_explanation_1993,
+	title = {Explanation of the {L}-{H} mode transition induced by applied voltage},
+	volume = {33},
+	issn = {0029-5515},
+	url = {http://stacks.iop.org/0029-5515/33/i=9/a=I01},
+	doi = {10.1088/0029-5515/33/9/I01},
+	abstract = {The response of the edge plasma to an applied voltage is analysed. When the anomalous transport is ambipolar, the radial current is determined by neoclassical fluxes. An equation is given for the neoclassical radial current which is valid across the transition between the plateau regime and the collisional viscous regime. The current first increases with the applied electric field E 1 and then decreases owing to either the resonant velocity band being pushed to the tail of the ion velocity distribution or a decrease in viscous damping. Thus the same current can be driven by two different electric fields, E 1 and E 2 . This allows an equilibrium field profile to be obtained, where E changes abruptly from E 1 to E 2 at some intermediate radius, while maintaining current continuity. It is shown unambiguously that a continuous electric field profile becomes unstable when the applied voltage exceeds a critical value, the instability being driven by negative incremental resistivity. The profile then bifurcates and forms a branch with a discontinuous electric field. Qualitatively, the predicted behaviour agrees well with that observed in tokamaks where an H mode has been induced using a biased electrode. Quantitative comparisons with TEXTOR results are made and the predictions are found to be in qualitative agreement with measurement. The implications for spontaneous L-H transitions are discussed},
+	language = {en},
+	number = {9},
+	urldate = {2018-04-12},
+	journal = {Nuclear Fusion},
+	author = {Stringer, T. E.},
+	year = {1993},
+	pages = {1249}
 }
 
 @article{suttrop_identification_1997,
@@ -808,6 +934,22 @@ in simplified transport models of the fusion plasma in one spatial dimension. We
 	month = may,
 	year = {2014},
 	pages = {052302}
+}
+
+@article{wu_one-dimensional_2015,
+	title = {One-dimensional modelling of limit-cycle oscillation and {H}-mode power scaling},
+	volume = {55},
+	issn = {0029-5515},
+	url = {http://stacks.iop.org/0029-5515/55/i=5/a=053029},
+	doi = {10.1088/0029-5515/55/5/053029},
+	abstract = {To understand the connection between the dynamics of microscopic turbulence and the macroscale power scaling in the L–I–H transition in magnetically confined plasmas, a new time-dependent, one-dimensional (in radius) model has been developed. The model investigates the radial force balance equation at the edge region of the plasma and applies the quenching effect of turbulence via the E × B flow shear rate exceeding the shear suppression threshold. By slightly ramping up the heating power, the spatio-temporal evolution of turbulence intensity, density and pressure profiles, poloidal flow and E × B flow self-consistently displays the L–H transition with an intermediate phase (I-phase) characterized by limit-cycle oscillations. Since the poloidal flow is partially damped to the neoclassical flow in the edge region, the numerical results reveal two different oscillation relationships between the E × B flow and the turbulence intensity depending on which oscillation of the diamagnetic flow or poloidal flow is dominant. Specifically, by including the effects of boundary conditions of density and temperature, the model results in a linear dependence of the H-mode access power on the density and magnetic field. These results imply that the microscopic turbulence dynamics and the macroscale power scaling for the L–H transition are strongly connected.},
+	language = {en},
+	number = {5},
+	urldate = {2018-04-03},
+	journal = {Nuclear Fusion},
+	author = {Wu, Xingquan and Xu, Guosheng and Wan, Baonian and Rasmussen, Jens Juul and Naulin, Volker and Nielsen, Anders Henry},
+	year = {2015},
+	pages = {053029}
 }
 
 @article{zhang_edge_1992,
