--- a/Thesis/Physics_Bifurcation/Physics_Bifurcation.tex
+++ b/Thesis/Physics_Bifurcation/Physics_Bifurcation.tex
@@ -6,7 +6,7 @@ The aforementioned transitions show clear evidence of bifurcations in the plasma
 Mathematically, a bifurcation is defined to be a topological or qualitative change in a system when a small and smooth change of a parameter is made.
 A simple example for a fold bifurcation is the following, with $a$ representing the parameter:
 \begin{equation} % Simplest fold bifurcation
-	\frac{\text{d}x}{\text{d}t} \,=\, \dot{x} \,=\, a + x^2.
+	\frac{\text{d}x}{\text{d}t} \,=\, \dot{x} \,=\, a \,+\, x^2.
 	\label{eq:simple_fold}
 \end{equation}
 This equation can behave in one of three manners:
@@ -48,7 +48,7 @@ The dynamic behavior of the L--H transition correspond very closely to a few cer
 Sharp and smooth transitions are features of the cusp bifurcation.
 The topological norm form of this behavior is
 \begin{equation}
-	\dot{x} \,=\, -(a + bx - x^3)~.
+	\dot{x} \,=\, -(a \,+\, bx \,-\, x^3)~.
 	\label{eq:sharp_bif}
 \end{equation}
 Figure~\ref{fig:co-2_fold} is a plot of the parameter space, indicating the stable and unstable steady-state solutions.
