--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -108,11 +108,14 @@
 \input{titlepage}
 
 \normalsize
+\clearemptydoublepage
 
 \chapter*{Abstract}\label{chapter:abstract}
 %\input{ABSTRACT FILE HERE!!}
+\addcontentsline{toc}{chapter}{Abstract}
 
 \tableofcontents
+\newpage
 
 % ---------------------------------------------------------
 
