Working on fluxes; TONS to do

--- a/References/References.bib
+++ b/References/References.bib
@@ -350,6 +350,22 @@
 	pages = {1243--1247}
 }
 
+@article{hinton_neoclassical_1985,
+	title = {Neoclassical ion transport in rotating axisymmetric plasmas},
+	volume = {28},
+	issn = {0031-9171},
+	url = {https://aip.scitation.org/doi/abs/10.1063/1.865350},
+	doi = {10.1063/1.865350},
+	number = {10},
+	urldate = {2018-04-12},
+	journal = {The Physics of Fluids},
+	author = {Hinton, F. L. and Wong, S. K.},
+	month = oct,
+	year = {1985},
+	pages = {3082--3098}
+}
+
+
 @article{ida_experimental_1998,
 	title = {Experimental studies of the physical mechanism determining the radial electric field and its radial structure in a toroidal plasma},
 	volume = {40},
@@ -445,6 +461,22 @@
 	pages = {2485--2488}
 }
 
+@article{itoh_elmy_1993,
+	title = {The {ELMy} {H} mode as a limit cycle and the transient responses of {H} modes in tokamaks},
+	volume = {33},
+	issn = {0029-5515},
+	url = {http://stacks.iop.org/0029-5515/33/i=10/a=I04},
+	doi = {10.1088/0029-5515/33/10/I04},
+	abstract = {A model of edge localized modes (ELMs) in tokamaks is presented. The model of the L-H transition, which is based on electric field bifurcation, is extended to include the temporal evolution and the spatial structure. The existence of an electric field bifurcation implies that there is a hysteresis curve between the plasma gradient (thermodynamic force) and the associated flow of particles and heat. A time dependent Ginzburg-Landau equation is formulated for the electric field development, which leads to a limit cycle solution due to the hysteresis. A self-generated oscillation of the edge density appears, associated with periodic bursts of loss, under the condition of constant particle flux from the core. This is attributed to the small and frequent ELMy activity in H modes. Periodic decay and re-establishment of a transport barrier occur. This oscillation appears near the L-H transition boundary. It is found that in H and ELMy H states the edge region has a diffusion coefficient whose radial structure is intermediate (a mesophase) between the H phase and the L phase. This is attributed to the transport barrier. Its radial structure is governed by ion shear viscosity. The diffusion Prandtl number, the ratio of the viscosity of the diffusion coefficient, is found to determine the thickness of the barrier. The phase diagram of the L, ELMy H, H and L-H bistable states is obtained in plasma parameter space},
+	language = {en},
+	number = {10},
+	urldate = {2018-04-12},
+	journal = {Nuclear Fusion},
+	author = {Itoh, S.-I. and Itoh, K. and Fukuyama, A.},
+	year = {1993},
+	pages = {1445}
+}
+
 @article{kasuya_effect_2003,
 	title = {Effect of electrode biasing on the radial electric field structure bifurcation in tokamak plasmas},
 	volume = {43},
@@ -460,6 +492,23 @@
 	year = {2003},
 	note = {Weymiens's Thesis Ch. 6, Ref [52]},
 	pages = {244}
+}
+
+@book{kiviniemi_numerical_2001,
+	title = {Numerical simulation of neoclassical currents, parallel viscosity, and radial current balance in tokamak plasmas},
+	isbn = {9789512255382},
+	url = {https://aaltodoc.aalto.fi:443/handle/123456789/2346},
+	abstract = {One of the principal problems en route to a fusion reactor is that of insufficient plasma confinement, which has lead to both theoretical and experimental research into transport processes in the parameter range relevant for fusion energy production. The neoclassical theory of tokamak transport is well-established unlike the theory of turbulence driven anomalous transport in which extensive progress has been made during last few years. So far, anomalous transport has been dominant in experiments, but transport may be reduced to the neoclassical level in advanced tokamak scenarios.
+
+This thesis reports a numerical study of neoclassical fluxes, parallel viscosity, and neoclassical radial current balance in tokamaks. Neoclassical parallel viscosity and particle fluxes are simulated over a wide range of collisionalities, using the fully kinetic five-dimensional neoclassical orbit-following Monte Carlo code ASCOT. The qualitative behavior of parallel viscosity derived in earlier analytic models is shown to be incorrect for high poloidal Mach numbers. This is because the poloidal dependence of density was neglected. However, in high Mach number regime, it is the convection and compression terms, rather than the parallel viscosity term, that are shown to dominate the momentum balance. For fluxes, a reasonable agreement between numerical and analytical results is found in the collisional parameter regime. Neoclassical particle fluxes are additionally studied in the banana regime using the three-dimensional Fokker-Planck code DEPORA, which solves the drift-kinetic equation with finite differencing. Limitations of the small inverse aspect ratio approximation adopted in the analytic theory are addressed.
+
+Assuming that the anomalous transport is ambipolar, the radial electric field and its shear at the tokamak plasma edge can be solved from the neoclassical radial current balance. This is performed both for JET and ASDEX Upgrade tokamaks using the ASCOT code. It is shown that shear high enough for turbulence suppression can be driven at the Low (L) to High (H) transition conditions without taking into account anomalous processes. In agreement with experiments, simulations indicate a higher threshold temperature for the L–H transition in JET than in ASDEX Upgrade. The parametric dependence of the shear on temperature, density, and magnetic field, however, is similar for both devices. In agreement with some theoretical models and experimental observations, the results also suggest that the critical shear for strong turbulence suppression in JET should be lower than in ASDEX Upgrade.},
+	language = {en},
+	urldate = {2018-04-12},
+	publisher = {Helsinki University of Technology},
+	author = {Kiviniemi, Timo},
+	month = aug,
+	year = {2001}
 }
 
 @article{kobayashi_experimental_2016,
@@ -695,6 +744,7 @@
 	pages = {105009}
 }
 
+
 @article{scott_three-dimensional_1997,
 	title = {Three-dimensional computation of collisional drift wave turbulence and transport in tokamak geometry},
 	volume = {39},
@@ -725,6 +775,37 @@
 	author = {Scott, Bruce D.},
 	year = {2002},
 	pages = {52}
+}
+
+@article{shaing_poloidal_1992,
+	title = {Poloidal magnetic field dependence of the edge electric field layer width in the {H} mode in tokamaks},
+	volume = {4},
+	issn = {0899-8221},
+	url = {https://aip.scitation.org/doi/abs/10.1063/1.860276},
+	doi = {10.1063/1.860276},
+	number = {2},
+	urldate = {2018-04-13},
+	journal = {Physics of Fluids B: Plasma Physics},
+	author = {Shaing, K. C.},
+	month = feb,
+	year = {1992},
+	pages = {290--291}
+}
+
+@article{shaing_bifurcation_1989,
+	title = {Bifurcation theory of poloidal rotation in tokamaks: {A} model for {L}-{H} transition},
+	volume = {63},
+	shorttitle = {Bifurcation theory of poloidal rotation in tokamaks},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.63.2369},
+	doi = {10.1103/PhysRevLett.63.2369},
+	abstract = {It is shown that the poloidal momentum balance equation in tokamaks has bifurcated solutions. The poloidal flow velocity Up can suddenly become more positive when the ion collisionality decreases. The corresponding radial electric field Er becomes more negative and hence suppresses the turbulent fluctuations. Thus, plasma confinement is improved. The theory is employed to explain the L-H transition observed in tokamaks.},
+	number = {21},
+	urldate = {2018-04-13},
+	journal = {Physical Review Letters},
+	author = {Shaing, K. C. and Crume, E. C.},
+	month = nov,
+	year = {1989},
+	pages = {2369--2372}
 }
 
 @article{shaing_bifurcation_1990,
